--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,18 +27,18 @@ body {
 .header .nav {
     display: flex;
     justify-content: center;
-    width: 90%;
+    width: 92%;
     padding: 20px 0px 5px 0px;
     /* border: 1px solid red; */
 }
 
-/* .header .nav .navbar {
-    border: 1px solid blue;
-} */
+.header .nav .navbar {
+    /* border: 1px solid blue; */
+}
 
 .header .nav .navbar li {
     list-style: none;
-    padding: 0px 40px;
+    margin: 0px 30px;
     /* border: 1px solid red; */
 }
 
@@ -46,6 +46,25 @@ body {
     text-decoration: none;
     font-size: 1.2rem;
     color: rgb(255, 255, 255);
+}
+
+.navbar li {
+    position: relative;
+}
+
+.navbar li::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px; 
+    background-color: rgb(47, 143, 98); 
+	transition: 0.3s all linear;
+}
+
+.navbar li:hover::before {
+    width: 100%;
 }
 
 .menu-toggle {
@@ -103,7 +122,7 @@ body {
 }
 
 .home .container {
-    padding: 30px 0px 50px 0px;
+    padding: 30px 0px 60px 0px;
     /* border: 1px solid red; */
 }
 
@@ -157,6 +176,42 @@ body {
     padding: 5px;
 }
 
+.section-welcome .welcome .btn button:hover {
+    background: rgb(35, 117, 78);
+	transition: 0.3s all linear;
+}
+
+.section-welcome .welcome .btn button {	
+	animation: moveButton 2s infinite;
+}
+
+@keyframes moveButton {
+	0% {
+		transform: rotate(0deg);
+	}
+	10% {
+		transform: rotate(14deg);
+	}
+	20% {
+		transform: rotate(-8deg);
+	}
+	30% {
+		transform: rotate(14deg);
+	}
+	40% {
+		transform: rotate(-4deg);
+	}
+	50% {
+		transform: rotate(10deg);
+	}
+	60% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+
 .section-welcome .welcome .div-sombra {
     background: rgb(255, 255, 255);
     border-radius: 50%;
@@ -170,12 +225,12 @@ body {
     align-items: center;
     justify-content: flex-start;
     width: 100%;
-    height: 70vh;
+    /* border: 1px solid red; */
 }
 
 .content .profile-image img {
-    max-width: 90%; /* La imagen no será más grande que su contenedor */
-    max-height: 90%; /* La imagen no será más alta que su contenedor */
+    max-width: 80%; /* La imagen no será más grande que su contenedor */
+    max-height: 100%; /* La imagen no será más alta que su contenedor */
     width: auto; /* Permite que la imagen mantenga su proporción original */
     height: auto;
     /* border: 1px solid red; */
@@ -197,6 +252,7 @@ body {
 
     .content .section-profile .profile-image {
         justify-content: center;
+        margin: 20px 0px 0px 0px;
     }
 
     .section-welcome .welcome .btn button {
@@ -493,3 +549,17 @@ body {
     text-align: center;
     color: rgb(255, 255, 255);
 }
+
+
+/* score */
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 9999; 
+}
+
